--- a/style.css
+++ b/style.css
@@ -1,63 +1,23 @@
-/* *{
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-.container{
-    margin: 6rem auto;
-    padding: 1rem  2rem;
-    max-width: 400px;
-    border: 2px solid #3e3188;
-}
-
-button{
-    background-color: black;
-    color: #fff;
-    padding: 12px 24px;
-    border-radius: 10px 0 10px 0;
-    display: block;
-    border: none;
-    margin: 1rem auto;
-}
-
-button a{
-    text-decoration: none;
-    font-weight: 600;
-    color: #fff;
-}
-
-h3{
-    font-size: 3rem;
+.container {
+    max-width: 50%;
+    margin: auto;
     text-align: center;
-    margin: 1rem 0 1.5rem 0;
-    font-weight: 500;
 }
 
-input[type=text], input[type=password], input[type=email]{
-    width: 100%;
+input {
+    margin: 10px;
+    padding: 0.5rem;
+    width: 70%;
+}
+input[type='submit']{
+    background-color: #39e839;
     border: none;
-    border-bottom: 1px solid #000;
-    margin: 15px 0;
+    padding: 0.7rem;
 }
-
-input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
-    outline: none;
-}
-
-p{
-    font-size: 15px;
-    text-align: center;
-    margin: 20px  0 0 0;
-}
-
-p a{
-    text-decoration: underline;
-    font-weight: 600;
-    color: #000;
-}
-
-::placeholder{
-    font-size: 16px;
-} */
